--- a/templates/articles/articles.html.twig
+++ b/templates/articles/articles.html.twig
@@ -22,15 +22,13 @@
 
                 <div class="content"><p>{{ article.content | raw}}</p></div>
 
-                <button id="myBtn{{article.id}}">Open Modal</button>
-                <div id="myModal{{article.id}}" class="modal">
+                <button onclick="testmodal({{article.id}})" class="btnarticle" id="my-btn-{{article.id}}">Open Modal</button>
+                <div id="my-modal-{{article.id}}" class="modal">
                 <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <p>Some text in the Modal..</p>
+                    <span onclick="fermermodal({{article.id}})" class="close">&times;</span>
+                    <p>{{ article.id }} {{ article.content | raw }}</p>
                 </div>
                 </div>
-
-                <article id="articles" data-id="{{article.id}}"></article>
 
             </div>
         
@@ -42,21 +40,36 @@
 {% endblock %}
 
                 {% block javascripts %}
+                <script
+                src="https://code.jquery.com/jquery-3.5.1.min.js"
+                integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+                crossorigin="anonymous">
+                </script>
                     <script type="text/javascript">
-                        const article = document.querySelector('#articles');
-                        var modal = document.getElementById("myModal" + article.dataset.id);
-                        var btn = document.getElementById("myBtn" + article.dataset.id);
+                        function testmodal(id){
+                            console.log(id);
+                        
+                        var modal = document.getElementById("my-modal-" + id);
+                        var btn = document.getElementById("my-btn-" + id);
                         var span = document.getElementsByClassName("close")[0];
-                        btn.onclick = function() {
-                            modal.style.display = "block";
-                        }
-                        span.onclick = function() {
-                            modal.style.display = "none";
-                        }
+
+                        modal.style.display = "block";
+
                         window.onclick = function(event) {
                             if (event.target == modal) {
                                 modal.style.display = "none";
                         }
-                        } 
+                        }
+                        }
+                        
+                        function fermermodal(id) {
+                            var modal2 = document.getElementsByClassName("modal")[id-1];
+                            modal2.style.display = "none";
+                        }
+
                     </script>
                 {% endblock %}
+
+
+
+
