--- a/public/css/article/liste/nosArticles.css
+++ b/public/css/article/liste/nosArticles.css
@@ -24,13 +24,15 @@
 
 .date {
     margin-bottom: 10px;
+    display: inline-block;
 }
 
-.pagination  {
+.pagination {
     display: inline-block;
-  }
-  
-.pagination a, .current{
+}
+
+.pagination a,
+.current {
     color: black;
     float: left;
     padding: 8px 16px;
@@ -44,56 +46,132 @@
     color: white;
     border: 1px solid #4CAF50;
 }
-  
-.pagination a:hover {background-color: #ddd;}
 
-#videofond {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    background: url(video.jpg) no-repeat;
-    background-size: cover;
+.pagination a:hover {
+    background-color: #ddd;
 }
 
+.btnarticle {
+    font-size: 15px;
+    text-align: center;
+    background: #FAB266;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    padding: 3px;
+    margin: auto;
+    margin-top: 10px;
+    width: 100px;
+    cursor: pointer;
+}
+
+
 /* The Modal (background) */
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content/Box */
-  .modal-content {
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+
+/* Modal Content */
+
+.modal-content {
+    position: relative;
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
+    margin: auto;
+    padding: 0;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaa;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+
+/* Add Animation */
+
+@-webkit-keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+
+/* The Close Button */
+
+.close {
+    color: white;
     float: right;
+    margin-right: 10px;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
     text-decoration: none;
     cursor: pointer;
-  }
+}
+
+.modal-header {
+    padding: 20px;
+    font-size: 3ch;
+    background-color: #5cb85c;
+    color: white;
+}
+
+.modal-body {
+    padding: 30px 10px 30px 10px;
+    text-align: justify;
+}
+
+.bas {
+    background-color: #5cb85c;
+    padding: 10px;
+    margin-right: 0;
+    text-align: right;
+}
+
+.modal-footer {
+    font-size: 14px;
+    color: white;
+    display: inline-block;
+}
