--- a/templates/articles/articles.html.twig
+++ b/templates/articles/articles.html.twig
@@ -17,16 +17,22 @@
                 <div class="date">Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }}</div>
 
                 {% if article.updatedAt != NULL %}
-                    <div class="date">Modifié le {{ article.updatedAt | date('d/m/Y') }} à {{ article.updatedAt | date('H:i') }}</div>
-                {% endif %}
+                    <div class="date">et Modifié le {{ article.updatedAt | date('d/m/Y') }} à {{ article.updatedAt | date('H:i') }}</div>
+                {% endif %} <br>
 
-                <div class="content"><p>{{ article.content | raw}}</p></div>
-
-                <button onclick="testmodal({{article.id}})" class="btnarticle" id="my-btn-{{article.id}}">Open Modal</button>
+                <button onclick="testmodal({{article.id}})" class="btnarticle" id="my-btn-{{article.id}}">Consulter</button>
                 <div id="my-modal-{{article.id}}" class="modal">
                 <div class="modal-content">
                     <span onclick="fermermodal({{article.id}})" class="close">&times;</span>
-                    <p>{{ article.id }} {{ article.content | raw }}</p>
+                    <div class="modal-header"> {{article.title}} </div>
+                    <div class="modal-body"> {{ article.content | raw }} </div>
+                    <div class="bas">
+                        <div class="modal-footer"> Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }} </div>
+                        {% if article.updatedAt != NULL %}
+                            <div class="modal-footer"> et Modifié le {{ article.updatedAt | date('d/m/Y') }} à {{ article.updatedAt | date('H:i') }}</div>
+                         {% endif %}
+                    </div>
+
                 </div>
                 </div>
 
@@ -69,6 +75,7 @@
 
                     </script>
                 {% endblock %}
+
 
 
 
