--- a/public/css/article/liste/nosArticles.css
+++ b/public/css/article/liste/nosArticles.css
@@ -179,3 +179,10 @@
     color: white;
     display: inline-block;
 }
+
+.miniatureliste {
+    width: 80px;
+    height: 80px;
+    border-radius: 50px;
+    float: left;
+}
