--- a/templates/articles/articles.html.twig
+++ b/templates/articles/articles.html.twig
@@ -13,14 +13,14 @@
         {% for article in articles %}
             
             <div class="box">
+                                <img class="miniatureliste" src="{{ article.srcImage }}"/>
                 <div class="titreArticle"><h2>{{article.title}}</h2></div>
                 <div class="date">Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }}</div>
 
                 {% if article.updatedAt != NULL %}
                     <div class="date">et Modifié le {{ article.updatedAt | date('d/m/Y') }} à {{ article.updatedAt | date('H:i') }}</div>
                 {% endif %} <br>
-                    <img class="miniatureliste" src="{{ article.srcImage }}"/>
-                <button onclick="testmodal({{article.id}})" class="btnarticle" id="my-btn-{{article.id}}">Open Modal</button>
+                <button onclick="testmodal({{article.id}})" class="btnarticle" id="my-btn-{{article.id}}">Consulter</button>
                 <div id="my-modal-{{article.id}}" class="modal">
                 <div class="modal-content">
                     <span onclick="fermermodal({{article.id}})" class="close">&times;</span>
